docs/tests/parser/expressions/invalid/ExprIndexMissingCloseBracket.b
fn void test() {
    let int x = a[0;
}
